--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
+    "aos": "^2.3.4",
+    "axios": "^1.13.2",
+    "firebase": "^12.6.0",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.4",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
